--- a/style/_log.less
+++ b/style/_log.less
@@ -34,8 +34,9 @@
     top: 1.25em;
     left: 1em;
     border-style: solid;
-    border-width: 5px 0 5px 4px;
+    border-width: 5px 0 5px 5px;
     border-color: transparent transparent transparent @error-text;
+    transition: all 100ms ease-in-out;
   }
 
   &.expanded:before {
